Ajustes nas seções versão mobile

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,3 +2,4 @@
 @import '/src/css/utils/colors.css';
 @import '/src/css/header/navbar.css';
 @import '/src/css/hero/index.css';
+@import '/src/css/mainSections/mainSections.css'
