--- a/src/css/hero/index.css
+++ b/src/css/hero/index.css
@@ -16,6 +16,8 @@
     top: 398px;
     gap: 35px;
     padding: 0 20px;
+    max-height: 500px;
+    width: 100%;
 }
 
 .textsLogin {
@@ -41,7 +43,8 @@
 .registerCard {
     background-color: var(--main-white);
     margin: 0 auto;
-    width: 389px;
+    width: calc(100% - 60px);
+    max-width: 400px;
     border-radius: 20px;
     padding: 38px 30px;
     box-sizing: border-box;
@@ -68,6 +71,7 @@
     outline: none;
     font-size: 1.25rem;
     padding-bottom: 10px;
+    width: 100%;
 }
 
 .registerPlaceholder {
@@ -127,6 +131,7 @@
     max-height: 350px;
     width: 410px;
     margin-right: 50px;
+    min-width: 312px;
   }
 
   .registerCardTitle {
