--- a/src/css/utils/colors.css
+++ b/src/css/utils/colors.css
@@ -4,6 +4,7 @@
     --purple-2:#e0c2ff;
     --main-white: #ffffff;
     --main-black: #111111;
+    --grey-0: #f5f5f5;
     --grey-1: #dedede;
     --grey-2: #bcbcbc;
     --grey-3: #585858;
